# Uniclip

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  uniclip.cpp
Utils/Client/: Client.h
Utils/Clipboard/: Clipboard.cpp  Clipboard.h
Utils/Crypto/: Crypto.cpp  Crypto.h
Utils/Data/: Data.cpp  Data.h
Utils/Logging/: Logging.cpp  Logging.h
Utils/Network/: Network.cpp  Network.h
Utils/Notifications/: Notify.cpp  Notify.h
Utils/Server/: Server.h
